RESOLVED FIXED18376
r31733 and 27 don't work w/Safari 3.1
https://bugs.webkit.org/show_bug.cgi?id=18376
Summary r31733 and 27 don't work w/Safari 3.1
redmojave
Reported 2008-04-08 21:53:35 PDT
When trying to use r31733 and 27 with Safari 3.1, you get the Safari cannot open dialog: Safari cannot open a browser window and maybe missing some important resources. Try installing Safari again. r31446 works.
Attachments
redmojave
Comment 1 2008-04-10 20:30:50 PDT
Just tried r31786 and got the same error. Am I missing something?
redmojave
Comment 2 2008-04-10 20:40:48 PDT
The r31446's WebKit.dll is version 526+, but r31733/86's are 525+.
Adam Roben (:aroben)
Comment 3 2008-04-11 13:02:37 PDT
It looks like Safari can't instantiate a WebTextRenderer.
Adam Roben (:aroben)
Comment 4 2008-04-11 14:06:26 PDT
Fixed in r31819.
Adam Roben (:aroben)
Comment 5 2008-04-11 14:09:43 PDT
The problem here was that Safari was depending on the order of the classes used by WebKit's PROGID macro. This macro (and its friends) are now deprecated.
redmojave
Comment 6 2008-04-11 14:45:38 PDT
Thanks Adam.
Adam Roben (:aroben)
Comment 7 2008-04-13 18:03:29 PDT
*** Bug 16372 has been marked as a duplicate of this bug. ***
Alexey Proskuryakov
Comment 8 2008-04-14 00:50:21 PDT
*** Bug 18441 has been marked as a duplicate of this bug. ***
Note You need to log in before you can comment on or make changes to this bug.