third_party/WebKit/WebKit/win/ForEachCoClass.h
@@ -32,11 +32,10 @@ FASTVC-BENCH-CORPUS:chromium-main-v1-943b94ae-1c74-4335-94fa-ceb4d277cea8
 
 #include "ProgIDMacros.h"
 
+// Items may only be added to the end of this macro. No items may be removed from it.
 #define FOR_EACH_COCLASS(macro) \
     macro(CFDictionaryPropertyBag) \
-    macro(WebArchive) \
     macro(WebCache) \
-    macro(WebCoreStatistics) \
     macro(WebDatabaseManager) \
     macro(WebDownload) \
     macro(WebError) \
@@ -56,6 +55,8 @@ FASTVC-BENCH-CORPUS:chromium-main-v1-943b94ae-1c74-4335-94fa-ceb4d277cea8
     macro(WebURLRequest) \
     macro(WebURLResponse) \
     macro(WebView) \
+    macro(WebArchive) \
+    macro(WebCoreStatistics) \
     // end of macro
 
 #define WEBKITCLASS_MEMBER(cls) cls##Class,
